tests/invalid/for_ref_dict_not_supported.wio
fn Entry() -> i32 {
    let weights: Tree<i32, i32> = {< 1: 2 >};

    for ref key | value in weights {
        return 0;
    }

    return 0;
}
